--- a/SerialCom/SerialCom/SerialCom.resx
+++ b/SerialCom/SerialCom/SerialCom.resx
@@ -123,100 +123,7 @@
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>180, 17</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        AAABAAIAEBAAAAEAIABoBAAAJgAAACAgAAABACAAqBAAAI4EAAAoAAAAEAAAACAAAAABACAAAAAAAAAE
-        AAASCwAAEgsAAAAAAAAAAAAA////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADMAAAAzAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAA////AP///wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACamJb/Z2Vk/wAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAimJaU/2Nh
-        X/8AAAAiAAAAAAAAAAAAAAAAAAAAAAAAAAD///8A////AAAAAAAAAAAAAAAAAAAAAAAAAAAAiIiIuZSU
-        lf+Vlpb/iYmJuQAAAAAAAAAAAAAAAAAAAAAAAAAA////AP///wAAAAAAAAAAAAAAAAAAAAAAAAAAAJOT
-        k//j4t//zMrH/5SUlP8AAAAAAAAAAAAAAAAAAAAAAAAAAP///wD///8AAAAAAAAAAAAAAAAAAAAAAAAA
-        ACGSkpL/3Nva/9zb2v+SkpL/AAAAIQAAAAAAAAAAAAAAAAAAAAD///8A////AAAAAAAAAAAAAAAAAAAA
-        ACGFhYW2kJGR/42Ojv+Njo7/kJGR/4WFhbYAAAAhAAAAAAAAAAAAAAAA////AP///wAAAAAAAAAAIwAA
-        ADOFhYW2vb28/9nY1f/X1tT/19bU/9nY1f+9vbz/hYWFtgAAADMAAAAjAAAAAP///wD///8AAAAAAI6O
-        jr+ampr/kZGR/9DNzP/FxML/xMPB/8TDwf/FxML/0M3M/5GRkf+ampr/jo6OvwAAAAD///8A////AAAA
-        AACZmZn/09PT/4+Pj//NzMv/tLOx/7W0sv+1tLL/tLOx/83My/+Pj4//09PT/5mZmf8AAAAA////AP//
-        /wAAAAAAmZmZ/9LS0v+Oj4//0s/O/6WioP+mo6H/pqOh/6WioP/Sz87/jo+P/9LS0v+ZmZn/AAAAAP//
-        /wD///8AAAAAM5ycnP/W1dX/kpGR/9nX1f/Y1dT/2NXU/9jV1P/Y1dT/2tfV/5KRkf/W1dX/nJyc/wAA
-        ADP///8A////AImIh/+JhoT/iYSB/4iEgP+GgHz/g3x4/4J6dv+Ee3b/hn14/4iBfP+JhID/iYSB/4mG
-        hP+JiIf/////AP///wAAAAAAAAAAAD2Y3/8AAAAAOpHX/5Xp//+T6///bNv//0bN//89k9f/AAAAAD2Y
-        3/8AAAAAAAAAAP///wD///8AAAAAAAAAAABFl9b/AAAAAEGR0P/I9///3////8v2//+98v//Q5LQ/wAA
-        AABFl9b/AAAAAAAAAAD///8A////AAAAAAAAAAAAAAAAAAAAAABHlNCvQpDO/z+OzP9Ajsz/Q5DO/0eU
-        0K8AAAAAAAAAAAAAAAAAAAAA////AP5/AAD+fwAA/D8AAPw/AAD8PwAA+B8AAPAPAADAAwAAwAMAAMAD
-        AADAAwAAgAEAAIABAADoFwAA6BcAAPgfAAAoAAAAIAAAAEAAAAABACAAAAAAAAAQAAASCwAAEgsAAAAA
-        AAAAAAAA////AP///wD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAYAAAARAAAAFgAAABYAAAARAAAABgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAA////AP///wD///8A////AP///wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAEQAAADIAAABDAAAAQwAAADIAAAARAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAD///8A////AP///wD///8A////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAWg4OD/9fW1P+uq6n/hYWF/wAAABYAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wD///8A////AP///wD///8AAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABaDg4P/19bU/66rqf+FhYX/AAAAFgAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////AP///wD///8A////AP///wAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFoODg//X1tT/rqup/4WFhf8AAAAWAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD///8A////AP///wD///8A////AAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAeg4OD/9jX1P+urKn/hYWF/wAA
-        AB4AAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wD///8A////AP//
-        /wD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADQAAADCEhIT/2tnW/7Ct
-        q/+FhYb/AAAAMAAAAA0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////AP//
-        /wD///8A////AP///wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUeHh4vYKC
-        g/9+f3//f4CA/4ODg/94eHi9AAAAFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAD///8A////AP///wD///8A////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        ABaEhIT/4N/d/9PRzv/T0c7/4N/d/4SEhP8AAAAWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAP///wD///8A////AP///wD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAQAAAANAAAAJYODg//Z2Nf/srGu/7Kxrv/Z2Nf/g4OD/wAAACUAAAANAAAABAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAA////AP///wD///8A////AP///wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAADQAAACsAAABFg4OD/9va2f/Y19b/2NfW/9va2f+Dg4P/AAAARQAAACsAAAANAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD///8A////AP///wD///8A////AAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAVeXl5w4ODhP+AgIH/fX19/3t7fP97e3z/fX19/4CAgf+Dg4T/eXl5wwAA
-        ABUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wD///8A////AP///wD///8AAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABaEhIT/4eDe/9fW1P/W1dP/1tXT/9bV0//W1dP/19bU/+Hg
-        3v+EhIT/AAAAFgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////AP///wD///8A////AP//
-        /wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFoKCg//W1dP/vry6/768uv+/vLr/v7y6/768
-        uv++vLr/1tXT/4KCg/8AAAAWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD///8A////AP//
-        /wD///8A////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAAAdg4OD/9XU0/+pp6X/qael/6qo
-        pf+qqKX/qael/6mnpf/V1NP/g4OD/wAAAB0AAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//
-        /wD///8A////AP///wD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAAAAFAAAADODg4P/2tnY/9fW
-        1f/X1tX/19bV/9fW1f/X1tX/19bV/9rZ2P+Dg4P/AAAAMwAAABQAAAADAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAA////AP///wD///8A////AP///wAAAAAAAAAAAAAAAAAAAAAAAAAABAAAABQAAAAycXFxv4CA
-        gf98fH3/e3t7/3t7e/97e3v/e3t7/3t7e/97e3v/fHx9/4CAgf9xcXG/AAAAMgAAABQAAAAEAAAAAAAA
-        AAAAAAAAAAAAAAAAAAD///8A////AP///wD///8A////AAAAAAAAAAAAAAAAAAAAAAAAAAANAAAALnJy
-        csG7urn/3t3b/9zb2f/c29j/3NvY/9zb2P/c29j/3NvY/9zb2P/c29n/3t3b/7u6uf9ycnLBAAAALgAA
-        AA0AAAAAAAAAAAAAAAAAAAAAAAAAAP///wD///8A////AP///wD///8AAAAAAAAAAAQAAAANAAAAEgAA
-        ACB2dnbBtre0/9TS0P/Rzsz/0M3L/9DNy//Qzcv/0M3L/9DNy//Qzcv/0M3L/9DNy//Rzsz/1NLQ/7a3
-        tP92dnbBAAAAIAAAABIAAAANAAAABAAAAAAAAAAA////AP///wD///8A////AP///wAAAAAAAAAADQAA
-        ACsAAAA7AAAAP4ODg//T0M7/ycjG/8fGxP/HxsT/x8bE/8fGxP/HxsT/x8bE/8fGxP/HxsT/x8bE/8fG
-        xP/JyMb/09DO/4ODg/8AAAA/AAAAOwAAACsAAAANAAAAAAAAAAD///8A////AP///wD///8A////AAAA
-        AAAAAAAVeXl5xYWFhf9rbGy5gYKC/87Ny//Bv73/wb+9/8G/vf/Bv73/wb+9/8G/vf/Bv73/wb+9/8G/
-        vf/Bv73/wb+9/8G/vf/Ozcv/goKC/2xsbbmGhob/eXl5xQAAABUAAAAAAAAAAP///wD///8A////AP//
-        /wD///8AAAAAAAAAABaEhIT/29rX/7Ctq/+AgID/zcvK/7q5t/+6ubf/urm3/7q5t/+6ubf/urm3/7q5
-        t/+6ubf/urm3/7q5t/+6ubf/urm3/83Lyv+AgYH/pqSh/9HPzf+FhYX/AAAAFgAAAAAAAAAA////AP//
-        /wD///8A////AP///wAAAAAAAAAAFoODg//Y19T/raqo/39/gP/LzMn/s7Gv/7SysP+0srD/tLKw/7Sy
-        sP+0srD/tLKw/7SysP+0srD/tLKw/7SysP+zsa//y8zJ/4CAgP+kop//zszK/4SEhP8AAAAWAAAAAAAA
-        AAD///8A////AP///wD///8A////AAAAAAAAAAAWg4OD/9fW1P+sqqj/f3+A/8zLyv+sqqj/rqyq/66s
-        qv+urKr/rqyq/66sqv+urKr/rqyq/66sqv+urKr/rqyq/6yqqP/My8r/gICA/6Shn//OzMn/g4SE/wAA
-        ABYAAAAAAAAAAP///wD///8A////AP///wD///8AAAAAAAAAABaDg4P/19bU/6yqqP9/f4D/zc3K/6Si
-        oP+lo6H/pqSi/6akov+mpKL/pqSi/6akov+mpKL/pqSi/6akov+lo6H/pKKg/87Nyv+AgIH/pKGf/87M
-        yf+DhIT/AAAAFgAAAAAAAAAA////AP///wD///8A////AP///wAAAAAGAAAAIoSEhP/Y19X/raup/3+A
-        gP/Qzs3/m5mX/52amP+dm5n/nZuZ/52bmf+dm5n/nZuZ/52bmf+dm5n/nZuZ/52amP+bmZf/0M7N/4CB
-        gf+koqD/z83K/4SEhf8AAAAiAAAABgAAAAD///8A////AP///wD///8A////AAAAAAsAAAAnh4eG/93b
-        2P+yr6z/g4OD/9va2P/Z2Nb/2dfV/9nX1f/Z1tX/2dbV/9nX1f/Z19X/2dfV/9rX1f/a19X/2tfV/9nY
-        1v/b2tj/hIOD/6mlov/U0M3/iIeH/wAAACcAAAALAAAAAP///wD///8A////AP///wD///8AAAAABnd2
-        dv93c3D/dm5q/3Zva/91cm//c3Bt/3NsaP9xaGP/b2Zi/21lYv9tZWL/bmVi/3BmYv9xZ2L/cmdi/3No
-        Yv9zaWP/c2xo/3Nvbf92cW7/d29q/3Zwa/93dHL/eHd2/wAAAAYAAAAA////AP///wD///8A////AP//
-        /wAAAAAAAAAAAAAAABY1yv//Q5fb/wAAABYAAAAWPpTa/2TW//974f//o/H//5Xs//+H5f//ed///2vZ
-        //9d0///TMz//13U//8/ldn/AAAAFgAAABY2yv//Qpfc/wAAABYAAAAAAAAAAAAAAAD///8A////AP//
-        /wD///8A////AAAAAAAAAAAAAAAAFTzE//9Jk9D/AAAAFgAAABVCkdD/leL//3jZ//+g6v//kuT//4Td
-        //922P//aNH//1vM//9Kxf//keD//0ORz/8AAAAVAAAAFj3E//9Jk9H/AAAAFQAAAAAAAAAAAAAAAP//
-        /wD///8A////AP///wD///8AAAAAAAAAAAAAAAANP8H//0yPyf8AAAARAAAADUSQzv+47///0Pb//+L+
-        ///b+///1fj//872///I8///wvD//7rt//+17f//RJDN/wAAAA0AAAARP8H//0yPyf8AAAANAAAAAAAA
-        AAAAAAAA////AP///wD///8A////AP///wAAAAAAAAAAAAAAAAQ+uvm3P8D//wAAAAYAAAAERZDKtEOQ
-        zv8/jsz/Po3M/z6NzP8+jcz/P43M/0COzP9Bjsz/Qo/M/0SRzv9GkMq0AAAABAAAAAZAv///Prv5twAA
-        AAQAAAAAAAAAAAAAAAD///8A////AP/4H///+B////gf///4H///+B////AP///wD///8A////AP///A
-        A///wAP//8AD///AA///wAP//4AB//8AAP/+AAB//gAAf/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AA
-        AA/gAAAH4AAAB+AAAAf4AAAf+AAAH/gAAB/4AAAf
-</value>
-  </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>40</value>
+  </metadata>
 </root>
